Initial commit after setting up the GitHub remote. Version 0.0.1 is now complete with basic functionality and just needs to be extended.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# ignore Notepad++ backup files
+*.bak
+
+#ignore temp files
+*~
+
+# ignore Node Modules
+node_modules/
+
+# ignore jQuery and JS map files
+jquery*.js
+*.map
+
 lib-cov
 *.seed
 *.log
