--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"express"    : "3.x.x",
 		"jade"       : "0.x.x",
 		"mongoose"   : "3.x.x",
-		"sprintf.js" : "0.1.x"
+		"sprintf.js" : "0.1.x",
+		"async"      : ">=0.2.9"
 	},
 	"engines": [
 		"node",
