--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
 		"jade"       : "0.x.x",
 		"mongoose"   : "3.x.x",
 		"sprintf.js" : "0.1.x",
-		"async"      : ">=0.2.9"
+		"async"      : ">=0.2.9",
+		"passport"   : "0.2.x",
+		"passport-local"    : "~0.1.6",
+		"passport-facebook" : "~1.0.2",
+		"connect-flash" : "0.1.x",
+		"bcrypt-nodejs" : "latest"
 	},
 	"engines": [
 		"node",
