--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
 	],
 	"dependencies": {
 		"express"       : "3.x.x",
-		"jade"          : "0.x.x",
+		"jade"          : "^1.3",
 		"mongoose"      : "3.x.x",
 		"sprintf.js"    : "0.1.x",
-		"async"         : ">=0.2.9",
-		"connect-flash" : "0.1.x",
+		"async"         : "^0.2.9",
+		"connect-flash" : "^0.1.x",
 		"bcrypt-nodejs" : "latest",
+		"librecaptcha"  : "^0.0.5",
 		"passport"      : "0.2.x",
-		"passport-local"        : "~0.1.6",
-		"passport-google-oauth" : "~0.1.5",
-		"passport-facebook"     : "~1.0.2",
-		"passport-openid"       : "~0.3.1"
+		"passport-local"        : "^1",
+		"passport-google-oauth" : "^0.1.5",
+		"passport-facebook"     : "^1.0.2",
+		"passport-openid"       : "^0.3.1"
 	},
 	"engines": [
 		"node",
@@ -33,5 +34,8 @@
 	"keywords": [
 		"DSA",
 		"MongoDB"
-	]
+	],
+	"scripts": {
+		"start": "node app.js"
+	}
 }
