--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	],
 	"bugs": {
 		"url": "https://github.com/Dormilich/dcm/issues"
-	}
+	},
 	"dependencies": {
 		"express"       : "3.x.x",
 		"jade"          : "^1.3",
@@ -41,6 +41,6 @@
 	"scripts": {
 		"start": "node app.js"
 	},
-	"main":    "app.js";
+	"main":    "app.js",
 	"license": "MIT",
 }
