--- a/package.json
+++ b/package.json
@@ -1,46 +1,60 @@
 {
-	"name":        "dcm",
-	"description": "a DSA Character Manager",
-	"version":     "0.0.6",
-	"author":      "Bertold von Dormilich <Dormilich@netscape.net>",
-	"maintainers": [
-		{ "name": "Bertold von Dormilich", "email": "Dormilich@netscape.net" }
-	],
-	"contributors": [
-		{ "name": "Bertold von Dormilich", "email": "Dormilich@netscape.net" }
-	],
-	"repository": [
-		{ "type": "git", "url": "https://github.com/Dormilich/dcm" }
-	],
-	"bugs": {
-		"url": "https://github.com/Dormilich/dcm/issues"
-	},
-	"dependencies": {
-		"express"       : "3.x.x",
-		"jade"          : "^1.3",
-		"mongoose"      : "3.x.x",
-		"sprintf.js"    : "0.1.x",
-		"async"         : "^0.2.9",
-		"connect-flash" : "^0.1.x",
-		"bcrypt-nodejs" : "latest",
-		"librecaptcha"  : "^0.0.5",
-		"passport"      : "0.2.x",
-		"passport-local"        : "^1",
-		"passport-google-oauth" : "^0.1.5",
-		"passport-facebook"     : "^1.0.2",
-		"passport-openid"       : "^0.3.1"
-	},
-	"engines": [
-		"node",
-		"npm"
-	],
-	"keywords": [
-		"DSA",
-		"MongoDB"
-	],
-	"scripts": {
-		"start": "node app.js"
-	},
-	"main":    "app.js",
-	"license": "MIT"
+  "name": "dcm",
+  "description": "a DSA Character Manager",
+  "version": "0.0.6",
+  "author": "Bertold von Dormilich <Dormilich@netscape.net>",
+  "maintainers": [
+    {
+      "name": "Bertold von Dormilich",
+      "email": "Dormilich@netscape.net"
+    }
+  ],
+  "contributors": [
+    {
+      "name": "Bertold von Dormilich",
+      "email": "Dormilich@netscape.net"
+    }
+  ],
+  "repository": [
+    {
+      "type": "git",
+      "url": "https://github.com/Dormilich/dcm"
+    }
+  ],
+  "bugs": {
+    "url": "https://github.com/Dormilich/dcm/issues"
+  },
+  "dependencies": {
+    "express": "3.x.x",
+    "jade": "^1.3",
+    "mongoose": "3.x.x",
+    "sprintf.js": "0.1.x",
+    "async": "^0.2.9",
+    "connect-flash": "^0.1.x",
+    "bcrypt-nodejs": "latest",
+    "librecaptcha": "^0.0.5",
+    "passport": "0.2.x",
+    "passport-local": "^1",
+    "passport-google-oauth": "^0.1.5",
+    "passport-facebook": "^1.0.2",
+    "passport-openid": "^0.3.1"
+  },
+  "engines": [
+    "node",
+    "npm"
+  ],
+  "keywords": [
+    "DSA",
+    "MongoDB"
+  ],
+  "scripts": {
+    "start": "node app.js"
+  },
+  "main": "app.js",
+  "license": "MIT",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-uglify": "^0.5.1"
+  }
 }
